# llm-dependency

./: .gitattributes  .gitignore  README.md  REPRODUCE.md  auto_merge_combined.py  beam_v5.py  compare.md  dedup.py  dedup_apply_splits.py  dedup_graph.py  dedup_lib.py  dedup_v3.py  dedup_v6.py  dedup_v8.py  dedup_v8_fix.py  edge_audit.py  final_orchestrator.py  keep_alive_orchestrator.sh  opus_verify_v5.py  pyproject.toml  recurse_v4.py  release_filter_v7.py  requirements.txt  resume_bfs.py  retry_v3.py  schema.sql  snapshot_merge.py  viz.py  viz_v4.py  watch_and_merge.py
baselines/: README.md  launch_baselines.py
baselines/outputs/: cc_dr_tulu.json  cc_nemotron3_super.json  cc_olmo3.json  cc_smollm3.json  gpt54pro_dr_tulu.json  gpt54pro_nemotron3_super.json  gpt54pro_olmo3.json  gpt54pro_smollm3.json  gpt55pro_dr_tulu.json  gpt55pro_nemotron3_super.json  gpt55pro_olmo3.json  gpt55pro_smollm3.json  o3dr_dr_tulu.json  o3dr_nemotron3_super.json  o3dr_olmo3.json  o3dr_smollm3.json  prov_dr_tulu.json  prov_nemotron3_super.json  prov_olmo3.json  prov_smollm3.json  prov_unbounded_dr_tulu.json  prov_unbounded_nemotron3_super.json  prov_unbounded_smollm3.json
baselines/prompts/: baseline_prompt.md
data/: merge_artifact.json
docs/: index.html
docs/data/: drtulu.json  nemotron3.json  olmo3.json  smollm3.json
eval/: README.md  build_modsleuth_inputs.py  compute_graph_stats.py  full_graph_audit.py  pooled_eval.py  verifier_prompt.md
eval/outputs/: full_graph_verifications.score.json  score.json  score_per_target.json
gdb/: __init__.py  artifacts.py  cli.py  code_refs.py  config.py  enrich.py  facets.py  grouping.py  lattice.py  linker.py  pipeline.py  resolve.py  store.py  subsets.py  viz.py
gdb/prompts/: audit.md  describe-entities.md  describe.md  linker.md  (+10 more)
lineage/: cli.py  config.py  pipeline.py  resolve.py  subsets.py  viz.py
modsleuth/: __init__.py  cli.py  config.py  export_viz.py  pipeline.py  recursive.py  resolve.py  viz.py
paper/: abstract_v8.tex  findings_appendix.tex  findings_qualitative.tex  findings_quantitative_v2.tex  findings_v8.tex
prompts/: investigator_prompt_dr_tulu.md  investigator_prompt_nemotron3_super.md  investigator_prompt_olmo3.md  investigator_prompt_smollm3.md
storage/: graph.db
tests/: conftest.py  test_artifacts.py  test_audit_stage.py  test_dedup_efficiency.py  test_describe_stage.py  test_extraction_phase_v2.py  test_fixtures.py  test_full_refinement_pipeline.py  test_lattice.py  test_linker.py  test_pipeline.py  test_pipeline_db.py  test_previous_run_cases.py  test_prompts.py  test_refinement_cases.py  test_resolve.py
(+14 files in other folders)
