[project]
name = "llm-dependency"
version = "0.1.0"
description = "discover → extract names → organize lattice"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
]

[project.scripts]
lineage = "lineage.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lineage"]

[tool.setuptools.data-files]
"share/lineage" = ["schema.sql"]
"share/lineage/prompts" = [
  "lineage/prompts/discover.md",
  "lineage/prompts/extract.md",
  "lineage/prompts/organize.md",
  "lineage/prompts/audit.md",
  "lineage/prompts/linker.md",
  "lineage/prompts/relate.md",
  "lineage/prompts/triage.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  "storage",
  ".venv",
  "__pycache__",
  ".pytest_cache",
]
