[project]
name = "modsleuth"
version = "0.1.0"
description = "ModSleuth: agentic recursive dependency tracing for LLM releases"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "requests>=2.31",
]

[project.scripts]
modsleuth = "modsleuth.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modsleuth", "modsleuth.dedup"]

[tool.setuptools.data-files]
"share/modsleuth" = ["schema.sql"]
"share/modsleuth/prompts" = [
  "modsleuth/prompts/discover.md",
  "modsleuth/prompts/extract.md",
  "modsleuth/prompts/organize.md",
  "modsleuth/prompts/audit.md",
  "modsleuth/prompts/relate.md",
  "modsleuth/prompts/triage.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  "storage",
  ".venv",
  "__pycache__",
  ".pytest_cache",
]
